Fix spacing and outlining for nested elements in Blog posts

--- a/src/css/skins/printdeal/themes/fr-responsive/components/_blog.scss
+++ b/src/css/skins/printdeal/themes/fr-responsive/components/_blog.scss
@@ -19,10 +19,15 @@ $space: $base-spacing-unit;
 
     h2,
     h3,
-    h4 {
+    h4,
+    ol,
+    ul,
+    blockquote {
         margin-bottom: $space;
     }
 
+    ol,
+    ul,
     p {
         margin-bottom: double($space);
         line-height: 1.5;
@@ -31,6 +36,14 @@ $space: $base-spacing-unit;
     p:first-of-type {
         font-size: 1.33em;
     }
+
+    ol,
+    ul {
+        margin-left: $base-spacing-unit;
+    }
+
+    ol { list-style-type: decimal; }
+    ul { list-style-type: circle; }
 
     img,
     iframe {
